# docrag

./: .gitignore  PIPELINE.MD  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
RAG_milvus_demo/: demo.py
agents/: citation_agent.py  md_clean_agent.py  references_agent.py
chatbot/: agent.py  db_agent.py  file_agent.py  internet_agent.py  summarizer_agent.py
chatbot/downloads/: icu-airway-management-guidelines-summary-20250820-163417.md  propofol-sedation-in-the-icu-conversation-summary-20250820-164300.md  standard-of-care-for-renal-replacement-therapy-in-icu-20250822-193315.md  summary-of-fluid-resuscitation-in-icu-patients-20250820-220436.md  (+1 more)
input/: README.md  check_pdf.py  input.py  input_pdf.json  utils.py
memory/: 2025-08-18-update.md  2025-08-19-adk-tool-fix.md  2025-08-19-citation-agent.md  2025-08-19-db-agent.md  2025-08-19-doi-client.md  2025-08-19-genai-500-mitigation.md  2025-08-19-md-clean-md-output.md  2025-08-19-merge-script.md  2025-08-20-add-metadata.md  2025-08-20-citation-keys-and-csl.md  2025-08-20-image-captions-bugfix.md  2025-08-20-milvus-indexing-fixes.md  2025-08-20-rag-prep.md  2025-08-20-runbook-new-pdf.md  2025-08-22-indexer-fix.md  2025-08-22-topic-dbs.md  project-memory.md
output/doc/: jama_summers_2025.json
src/: 00_basic.py  01_image_captions.py  02_1_strip_refs.py  02_merger.py  03_1_indexing_json.py  03_indexing.py  10_prepare_output_dirs.py  11_create_md_with_images.md  11_create_md_with_images.py  12_remove_refs_clean.py  13_add_metada.py  14_index.py  DOI_lookup.py  INDEXING_READ.MD
(+10 files in other folders)
